--- a/index.html
+++ b/index.html
@@ -95,7 +95,23 @@
     <footer class="py-4 text-center text-sm text-gray-500 mt-auto">
         <p>网站内容由 <a href="https://www.douyin.com/user/MS4wLjABAAAAGgdbz-Yh0hTEPA5wNcYgEOan22lIXB5TttF9dbmdxSA?from_tab_name=main&is_search=0&list_name=fans&nt=0" target="_blank" class="underline hover:text-gray-700">哇卡哇卡布鲁布鲁</a>搭建</p>
     </footer>
-
+    <script>
+    // 禁用右键菜单
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+        
+        // 禁用F12和Ctrl+U
+        document.onkeydown = function(e) {
+            if (e.keyCode === 123 || // F12
+                (e.ctrlKey && e.shiftKey && e.keyCode === 73) || // Ctrl+Shift+I
+                (e.ctrlKey && e.keyCode === 85) ||  // Ctrl+U
+                (e.ctrlKey && e.keyCode === 83)) {  // Ctrl+S
+                e.preventDefault();
+                return false;
+            }
+        };
+    </script>
     <script src="script.js"></script>
     <script>
         window.addEventListener("wheel", (e) => {
